<resources>
    <string name="app_name">ToDo</string>
    <string name="my_todos">Мои дела</string>
    <string name="show">Показать</string>
    <string name="create_todo">Создать задачу</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do_placeholder_text">Что надо сделать…</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="priority">Важность</string>
    <string name="deadline">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="completed">Выполнено — %1$d</string>
    <string name="hide">Скрыть</string>
    <string name="close_content_description">Закрыть</string>
    <string name="delete_content_description">Удалить</string>

    <string name="low_priority">Низкая</string>
    <string name="medium_priority">Обычная</string>
    <string name="high_priority">Высокая</string>

    <string name="error_empty_text_todo">Нельзя создать задачу с пустым текстом</string>
    <string name="network_error">Ошибка сети</string>

    <string name="loading_text">Идет загрузка, это будет быстро 😉</string>
    <string name="loading_error_text">Не удалось загрузить данные 😥</string>
    <string name="retry">Повторить</string>

    <string name="theme_choosing">Выбор темы приложения</string>
    <string name="day_theme">Светлая тема</string>
    <string name="night_theme">Темная тема</string>
    <string name="follow_system_theme">Как в системе</string>

    <string name="application_login">Вход в приложение</string>
    <string name="login_by_yandex_id">Войти с Яндекс ID</string>
    <string name="yandex_login_failure">Не удалось войти через Яндекс ID, попробуйте позже</string>
    <string name="yandex_login_cancelled">Вход через Яндекс ID отменен</string>
    <string name="yandex_login_success">Успешных вход через Яндекс ID</string>

    <string name="about_app">О приложении</string>
</resources>